--- a/package.json
+++ b/package.json
@@ -19,22 +19,27 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
-    "@ionic-native/barcode-scanner": "^3.4.2",
+    "@ionic-native/barcode-scanner": "^3.4.4",
     "@ionic-native/core": "^3.1.1",
-    "@ionic-native/file": "^3.3.1",
-    "@ionic-native/native-storage": "^3.1.1",
+    "@ionic-native/file": "^3.4.4",
+    "@ionic-native/geolocation": "^3.5.0",
+    "@ionic-native/native-storage": "^3.4.4",
     "@ionic-native/network": "^3.1.1",
     "@ionic-native/transfer": "^3.1.0",
     "@ionic/storage": "2.0.0",
+    "@types/node": "^7.0.13",
+    "datepicker-ionic2": "^2.3.0",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.8.1",
     "ionicons": "3.0.0",
+    "leaflet": "^1.0.3",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
+    "@types/node": "^7.0.13",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
