--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
     "@ionic-native/barcode-scanner": "^3.4.4",
-    "@ionic-native/core": "^3.1.1",
+    "@ionic-native/core": "^3.6.1",
     "@ionic-native/file": "^3.4.4",
     "@ionic-native/geolocation": "^3.5.0",
     "@ionic-native/native-storage": "^3.4.4",
     "@ionic-native/network": "^3.1.1",
-    "@ionic-native/transfer": "^3.1.0",
+    "@ionic-native/social-sharing": "^3.6.1",
+    "@ionic-native/text-to-speech": "^3.6.1",
+    "@ionic-native/transfer": "^3.6.1",
     "@ionic/storage": "2.0.0",
     "@types/node": "^7.0.13",
     "datepicker-ionic2": "^2.3.0",
